# longlaoshi-server

./: Cargo.toml
src/: chat.rs  chat_routes.rs  ia.rs  install_route.rs  main.rs  voice_route.rs
src/ia/: open_ai.rs  text_speech.rs
static/: index.js  styles.css
templates/: index.html.tera  styles.css
testing/: testing.html
