[package]
name = "longlaoshi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}

lru_time_cache = "0.11.11"
openai-api-rs = "4.0.8"
reqwest = { version = "0.11", features = ["json"] }

shuttle-rocket = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.26.0"

serde = "1.0.202"
serde_json = "1.0.117"

rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
